--- a/src/Styles/_hero.scss
+++ b/src/Styles/_hero.scss
@@ -1,9 +1,5 @@
 @import "variables";
 
-.--disable-scroll {
-    overflow: hidden;
-}
-
 .hero {
     display: flex;
     margin: 0 $side-margins;
