--- a/src/Styles/_utility.scss
+++ b/src/Styles/_utility.scss
@@ -28,3 +28,7 @@
 .u-underline {
     font-style: underline;
 }
+
+.--disable-scroll {
+    overflow: hidden;
+}
